--- a/src/_colors.css
+++ b/src/_colors.css
@@ -13,8 +13,8 @@
 :root {
   --black: #000;
   --near-black: #111;
-  --dark-gray:#333;
-  --mid-gray:#555;
+  --dark-gray: #333;
+  --mid-gray: #555;
   --gray: #777;
   --silver: #999;
   --light-silver: #aaa;
@@ -22,6 +22,7 @@
   --light-gray: #eee;
   --near-white: #f4f4f4;
   --white: #fff;
+  --text: #3E3866;
 
   --transparent:transparent;
 
