--- a/src/_skins.css
+++ b/src/_skins.css
@@ -4,8 +4,8 @@
    Docs: http://tachyons.io/docs/themes/skins/
 
    Classes for setting foreground and background colors on elements.
-   If you haven't declared a border color, but set border on an element, it will 
-   be set to the current text color. 
+   If you haven't declared a border color, but set border on an element, it will
+   be set to the current text color.
 
 */
 
@@ -21,6 +21,8 @@
 .black-20 {         color: var(--black-20); }
 .black-10 {         color: var(--black-10); }
 .black-05 {         color: var(--black-05); }
+
+.black-text {       color: var(--text);     }
 
 .white-90 {         color: var(--white-90); }
 .white-80 {         color: var(--white-80); }
