--- a/src/_spacing.css
+++ b/src/_spacing.css
@@ -183,6 +183,7 @@
 .ml5  {  margin-left: var(--spacing-extra-large); }
 .ml6 {  margin-left: var(--spacing-extra-extra-large); }
 .ml7 { margin-left: var(--spacing-extra-extra-extra-large); }
+.ml-auto { margin-left: auto; }
 
 .mr0  {  margin-right: var(--spacing-none); }
 .mr1 {  margin-right: var(--spacing-extra-small); }
@@ -192,6 +193,7 @@
 .mr5  {  margin-right: var(--spacing-extra-large); }
 .mr6 {  margin-right: var(--spacing-extra-extra-large); }
 .mr7 { margin-right: var(--spacing-extra-extra-extra-large); }
+.mr-auto { margin-right: auto; }
 
 .mb0  {  margin-bottom: var(--spacing-none); }
 .mb1 {  margin-bottom: var(--spacing-extra-small); }
@@ -405,6 +407,7 @@
   .ml5-ns  {  margin-left: var(--spacing-extra-large); }
   .ml6-ns {  margin-left: var(--spacing-extra-extra-large); }
   .ml7-ns { margin-left: var(--spacing-extra-extra-extra-large); }
+  .ml-auto-ns { margin-left: auto; }
 
   .mr0-ns  {  margin-right: var(--spacing-none); }
   .mr1-ns {  margin-right: var(--spacing-extra-small); }
@@ -414,6 +417,7 @@
   .mr5-ns  {  margin-right: var(--spacing-extra-large); }
   .mr6-ns {  margin-right: var(--spacing-extra-extra-large); }
   .mr7-ns { margin-right: var(--spacing-extra-extra-extra-large); }
+  .mr-auto-ns { margin-right: auto; }
 
   .mb0-ns  {  margin-bottom: var(--spacing-none); }
   .mb1-ns {  margin-bottom: var(--spacing-extra-small); }
@@ -630,6 +634,7 @@
   .ml5-m  {  margin-left: var(--spacing-extra-large); }
   .ml6-m {  margin-left: var(--spacing-extra-extra-large); }
   .ml7-m { margin-left: var(--spacing-extra-extra-extra-large); }
+  .ml-auto-m { margin-left: auto; }
 
   .mr0-m  {  margin-right: var(--spacing-none); }
   .mr1-m {  margin-right: var(--spacing-extra-small); }
@@ -639,6 +644,7 @@
   .mr5-m  {  margin-right: var(--spacing-extra-large); }
   .mr6-m {  margin-right: var(--spacing-extra-extra-large); }
   .mr7-m { margin-right: var(--spacing-extra-extra-extra-large); }
+  .mr-auto-m { margin-right: auto; }
 
   .mb0-m  {  margin-bottom: var(--spacing-none); }
   .mb1-m {  margin-bottom: var(--spacing-extra-small); }
@@ -855,6 +861,7 @@
   .ml5-l  {  margin-left: var(--spacing-extra-large); }
   .ml6-l {  margin-left: var(--spacing-extra-extra-large); }
   .ml7-l { margin-left: var(--spacing-extra-extra-extra-large); }
+  .ml-auto-l { margin-left: auto; }
 
   .mr0-l  {  margin-right: var(--spacing-none); }
   .mr1-l {  margin-right: var(--spacing-extra-small); }
@@ -864,6 +871,7 @@
   .mr5-l  {  margin-right: var(--spacing-extra-large); }
   .mr6-l {  margin-right: var(--spacing-extra-extra-large); }
   .mr7-l { margin-right: var(--spacing-extra-extra-extra-large); }
+  .mr-auto-l { margin-right: auto; }
 
   .mb0-l  {  margin-bottom: var(--spacing-none); }
   .mb1-l {  margin-bottom: var(--spacing-extra-small); }
