--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -1231,6 +1231,17 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .bg-washed-yellow { background-color: #fffceb; }
 .bg-washed-red { background-color: #ffdfdf; }
 .bg-inherit { background-color: inherit; }
+/* custom */
+.bg-primary-10 { background-color: rgba( 32, 37, 65, .1 ); }
+.bg-primary-20 { background-color: rgba( 32, 37, 65, .2 ); }
+.bg-primary-30 { background-color: rgba( 32, 37, 65, .3 ); }
+.bg-primary-40 { background-color: rgba( 32, 37, 65, .4 ); }
+.bg-primary-50 { background-color: rgba( 32, 37, 65, .5 ); }
+.bg-primary-60 { background-color: rgba( 32, 37, 65, .6 ); }
+.bg-primary-70 { background-color: rgba( 32, 37, 65, .7 ); }
+.bg-primary-80 { background-color: rgba( 32, 37, 65, .8 ); }
+.bg-primary-90 { background-color: rgba( 32, 37, 65, .9 ); }
+.bg-primary-100 { background-color: rgba( 32, 37, 65, 1 ); }
 /* 
   
    SKINS:PSEUDO
