--- a/src/_heights.css
+++ b/src/_heights.css
@@ -42,6 +42,7 @@
 /* Height Percentages - Based off of height of parent */
 
 .h-25 {  height:  25%; }
+.h-33 {  height:  33.3333333%; }
 .h-50 {  height:  50%; }
 .h-75 {  height:  75%; }
 .h-100 { height: 100%; }
