--- a/css/tachyons.css
+++ b/css/tachyons.css
@@ -1251,6 +1251,16 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .bg-primary-90 { background-color: rgba( 32, 37, 65, .9 ); }
 .bg-primary-95 { background-color: rgba( 32, 37, 65, .95 ); }
 .bg-secondary { background-color: #df9a37; }
+.bg-secondary-10 { background-color: rgba( 223, 154, 55, .1 ); }
+.bg-secondary-20 { background-color: rgba( 223, 154, 55, .2 ); }
+.bg-secondary-30 { background-color: rgba( 223, 154, 55, .3 ); }
+.bg-secondary-40 { background-color: rgba( 223, 154, 55, .4 ); }
+.bg-secondary-50 { background-color: rgba( 223, 154, 55, .5 ); }
+.bg-secondary-60 { background-color: rgba( 223, 154, 55, .6 ); }
+.bg-secondary-70 { background-color: rgba( 223, 154, 55, .7 ); }
+.bg-secondary-80 { background-color: rgba( 223, 154, 55, .8 ); }
+.bg-secondary-90 { background-color: rgba( 223, 154, 55, .9 ); }
+.bg-secondary-95 { background-color: rgba( 223, 154, 55, .95 ); }
 .b--primary { border-color: #446de8; }
 .b--secondary { border-color: #df9a37; }
 /* 
@@ -2022,6 +2032,170 @@ code, .code { font-family: Consolas, monaco, monospace; }
   Add custom styles here.
 
 */
+/*
+
+   FILLS
+
+   Classes for setting svg elements fill colors
+
+*/
+/* Tachyons defaults */
+.fill-black-90 { fill: rgba( 0, 0, 0, .9 ); }
+.fill-black-80 { fill: rgba( 0, 0, 0, .8 ); }
+.fill-black-70 { fill: rgba( 0, 0, 0, .7 ); }
+.fill-black-60 { fill: rgba( 0, 0, 0, .6 ); }
+.fill-black-50 { fill: rgba( 0, 0, 0, .5 ); }
+.fill-black-40 { fill: rgba( 0, 0, 0, .4 ); }
+.fill-black-30 { fill: rgba( 0, 0, 0, .3 ); }
+.fill-black-20 { fill: rgba( 0, 0, 0, .2 ); }
+.fill-black-10 { fill: rgba( 0, 0, 0, .1 ); }
+.fill-black-05 { fill: rgba( 0, 0, 0, .05 ); }
+.fill-black-text { fill: #3e3866; }
+.fill-white-90 { fill: rgba( 255, 255, 255, .9 ); }
+.fill-white-80 { fill: rgba( 255, 255, 255, .8 ); }
+.fill-white-70 { fill: rgba( 255, 255, 255, .7 ); }
+.fill-white-60 { fill: rgba( 255, 255, 255, .6 ); }
+.fill-white-50 { fill: rgba( 255, 255, 255, .5 ); }
+.fill-white-40 { fill: rgba( 255, 255, 255, .4 ); }
+.fill-white-30 { fill: rgba( 255, 255, 255, .3 ); }
+.fill-white-20 { fill: rgba( 255, 255, 255, .2 ); }
+.fill-white-10 { fill: rgba( 255, 255, 255, .1 ); }
+.fill-black { fill: #111; }
+.fill-near-black { fill: #111; }
+.fill-dark-gray { fill: #333; }
+.fill-mid-gray { fill: #555; }
+.fill-gray { fill: #777; }
+.fill-silver { fill: #999; }
+.fill-light-silver { fill: #aaa; }
+.fill-moon-gray { fill: #ccc; }
+.fill-light-gray { fill: #eee; }
+.fill-near-white { fill: #f4f4f4; }
+.fill-white { fill: #fff; }
+.fill-dark-red { fill: #e7040f; }
+.fill-red { fill: #ff4136; }
+.fill-light-red { fill: #ff725c; }
+.fill-orange { fill: #ff6300; }
+.fill-gold { fill: #ffb700; }
+.fill-yellow { fill: #ffd700; }
+.fill-light-yellow { fill: #fbf1a9; }
+.fill-purple { fill: #5e2ca5; }
+.fill-light-purple { fill: #a463f2; }
+.fill-dark-pink { fill: #d5008f; }
+.fill-hot-pink { fill: #ff41b4; }
+.fill-pink { fill: #ff80cc; }
+.fill-light-pink { fill: #ffa3d7; }
+.fill-dark-green { fill: #137752; }
+.fill-green { fill: #19a974; }
+.fill-light-green { fill: #9eebcf; }
+.fill-navy { fill: #001b44; }
+.fill-dark-blue { fill: #00449e; }
+.fill-blue { fill: #357edd; }
+.fill-light-blue { fill: #96ccff; }
+.fill-lightest-blue { fill: #cdecff; }
+.fill-washed-blue { fill: #f6fffe; }
+.fill-washed-green { fill: #e8fdf5; }
+.fill-washed-yellow { fill: #fffceb; }
+.fill-washed-red { fill: #ffdfdf; }
+.fill-color-inherit { fill: inherit; }
+/* Custom colors */
+.fill-primary { fill: #446de8; }
+.fill-dark-primary { fill: #1f2442; }
+.fill-secondary { fill: #df9a37; }
+.fill-washed-primary { fill: #868a95; }
+.fill-primary { fill: #446de8; }
+.fill-primary-10 { fill: rgba( 32, 37, 65, .1 ); }
+.fill-primary-20 { fill: rgba( 32, 37, 65, .2 ); }
+.fill-primary-30 { fill: rgba( 32, 37, 65, .3 ); }
+.fill-primary-40 { fill: rgba( 32, 37, 65, .4 ); }
+.fill-primary-50 { fill: rgba( 32, 37, 65, .5 ); }
+.fill-primary-60 { fill: rgba( 32, 37, 65, .6 ); }
+.fill-primary-70 { fill: rgba( 32, 37, 65, .7 ); }
+.fill-primary-80 { fill: rgba( 32, 37, 65, .8 ); }
+.fill-primary-90 { fill: rgba( 32, 37, 65, .9 ); }
+.fill-primary-95 { fill: rgba( 32, 37, 65, .95 ); }
+.fill-secondary { fill: #df9a37; }
+/*
+
+   STROKES
+
+   Classes for setting svg elements stroke colors
+
+*/
+/* Tachyons defaults */
+.stroke-black-90 { stroke: rgba( 0, 0, 0, .9 ); }
+.stroke-black-80 { stroke: rgba( 0, 0, 0, .8 ); }
+.stroke-black-70 { stroke: rgba( 0, 0, 0, .7 ); }
+.stroke-black-60 { stroke: rgba( 0, 0, 0, .6 ); }
+.stroke-black-50 { stroke: rgba( 0, 0, 0, .5 ); }
+.stroke-black-40 { stroke: rgba( 0, 0, 0, .4 ); }
+.stroke-black-30 { stroke: rgba( 0, 0, 0, .3 ); }
+.stroke-black-20 { stroke: rgba( 0, 0, 0, .2 ); }
+.stroke-black-10 { stroke: rgba( 0, 0, 0, .1 ); }
+.stroke-black-05 { stroke: rgba( 0, 0, 0, .05 ); }
+.stroke-black-text { stroke: #3e3866; }
+.stroke-white-90 { stroke: rgba( 255, 255, 255, .9 ); }
+.stroke-white-80 { stroke: rgba( 255, 255, 255, .8 ); }
+.stroke-white-70 { stroke: rgba( 255, 255, 255, .7 ); }
+.stroke-white-60 { stroke: rgba( 255, 255, 255, .6 ); }
+.stroke-white-50 { stroke: rgba( 255, 255, 255, .5 ); }
+.stroke-white-40 { stroke: rgba( 255, 255, 255, .4 ); }
+.stroke-white-30 { stroke: rgba( 255, 255, 255, .3 ); }
+.stroke-white-20 { stroke: rgba( 255, 255, 255, .2 ); }
+.stroke-white-10 { stroke: rgba( 255, 255, 255, .1 ); }
+.stroke-black { stroke: #111; }
+.stroke-near-black { stroke: #111; }
+.stroke-dark-gray { stroke: #333; }
+.stroke-mid-gray { stroke: #555; }
+.stroke-gray { stroke: #777; }
+.stroke-silver { stroke: #999; }
+.stroke-light-silver { stroke: #aaa; }
+.stroke-moon-gray { stroke: #ccc; }
+.stroke-light-gray { stroke: #eee; }
+.stroke-near-white { stroke: #f4f4f4; }
+.stroke-white { stroke: #fff; }
+.stroke-dark-red { stroke: #e7040f; }
+.stroke-red { stroke: #ff4136; }
+.stroke-light-red { stroke: #ff725c; }
+.stroke-orange { stroke: #ff6300; }
+.stroke-gold { stroke: #ffb700; }
+.stroke-yellow { stroke: #ffd700; }
+.stroke-light-yellow { stroke: #fbf1a9; }
+.stroke-purple { stroke: #5e2ca5; }
+.stroke-light-purple { stroke: #a463f2; }
+.stroke-dark-pink { stroke: #d5008f; }
+.stroke-hot-pink { stroke: #ff41b4; }
+.stroke-pink { stroke: #ff80cc; }
+.stroke-light-pink { stroke: #ffa3d7; }
+.stroke-dark-green { stroke: #137752; }
+.stroke-green { stroke: #19a974; }
+.stroke-light-green { stroke: #9eebcf; }
+.stroke-navy { stroke: #001b44; }
+.stroke-dark-blue { stroke: #00449e; }
+.stroke-blue { stroke: #357edd; }
+.stroke-light-blue { stroke: #96ccff; }
+.stroke-lightest-blue { stroke: #cdecff; }
+.stroke-washed-blue { stroke: #f6fffe; }
+.stroke-washed-green { stroke: #e8fdf5; }
+.stroke-washed-yellow { stroke: #fffceb; }
+.stroke-washed-red { stroke: #ffdfdf; }
+.stroke-color-inherit { stroke: inherit; }
+/* Custom colors */
+.stroke-primary { stroke: #446de8; }
+.stroke-dark-primary { stroke: #1f2442; }
+.stroke-secondary { stroke: #df9a37; }
+.stroke-washed-primary { stroke: #868a95; }
+.stroke-primary { stroke: #446de8; }
+.stroke-primary-10 { stroke: rgba( 32, 37, 65, .1 ); }
+.stroke-primary-20 { stroke: rgba( 32, 37, 65, .2 ); }
+.stroke-primary-30 { stroke: rgba( 32, 37, 65, .3 ); }
+.stroke-primary-40 { stroke: rgba( 32, 37, 65, .4 ); }
+.stroke-primary-50 { stroke: rgba( 32, 37, 65, .5 ); }
+.stroke-primary-60 { stroke: rgba( 32, 37, 65, .6 ); }
+.stroke-primary-70 { stroke: rgba( 32, 37, 65, .7 ); }
+.stroke-primary-80 { stroke: rgba( 32, 37, 65, .8 ); }
+.stroke-primary-90 { stroke: rgba( 32, 37, 65, .9 ); }
+.stroke-primary-95 { stroke: rgba( 32, 37, 65, .95 ); }
+.stroke-secondary { stroke: #df9a37; }
 /* Variables */
 /* Importing here will allow you to override any variables in the modules */
 /*
